# devil-connection-korean

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  installer.py  linux.spec  macos.spec  main.py  ui.py  windows.spec
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: Modal.svelte  tauri.ts  types.ts
specs/: linux.spec  macos.spec  windows.spec
src/: app.rs  asar.rs  config.json  config.py  config.rs  detect.rs  fonts.rs  install.rs  installer.py  installer.rs  main.rs  steam.rs  ui.py  ui.rs  updater.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asar.rs  installer.rs  lib.rs  main.rs  steam.rs
src/asar/: error.rs  extract.rs  header.rs  integrity.rs  mod.rs  pack.rs  progress.rs  tests.rs
