[package]
name = "devil-connection-patcher"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rfd = "0.17.2"
serde_json = { version = "1", features = ["preserve_order"] }
crossbeam-channel = "0.5"
include_dir = "0.7"
png = "0.18.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
