[package]
name = "devil-connection-korean"
version = "2.0.3"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["nyabi021"]
description = "Korean translation patcher for でびるコネクショん"
publish = false

[[bin]]
name = "DevilConnection-Patcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha2 = "0.11.0"
globset = "0.4.18"
walkdir = "2.5.0"
eframe = "0.34.1"
egui = "0.34.1"
rfd = "0.17.2"
include_dir = "0.7.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
